Se anexó un parrafo y se cambió el tipo de letra

--- a/Css/Estilos.css
+++ b/Css/Estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: gray;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Couriel";
     margin: 0
     padding: 0;
 }
@@ -18,5 +18,3 @@ body
 fontsize; 7px;
 }
 
-
-}
